# note_task_dev

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  TEST.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.typecheck.json  vite.config.ts
.claude/: launch.json
.github/workflows/: ci.yml  sidecar-binary.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/context_engine_20260226/: plan.md
conductor/archive/terminal_completion_20260227/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/context_engine_20260226/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/multi_tab_editor/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/production_ai_beta_90d/: index.md  metadata.json  plan.md  private_beta_onboarding.md  release_checklist_beta.md  spec.md  stabilization_sprint_playbook.md
conductor/tracks/terminal_completion_20260227/: plan.md
conductor/tracks/universal_search/: index.md  metadata.json  plan.md  spec.md
docs/: PROJECT_STATE.md  feb_27_updates.md  feb_28_updates.md  phase3_terminal_code_review.md
project_strategy/: README.md  project_review_and_strategy_v2.md
project_strategy/foundation/: 00_philosophy_and_principles.md  01_system_architecture.md  02_tech_stack.md  03_data_schema.md  STUDY_GUIDES.md  study_01_system_architecture.md  study_02_embeddings_and_semantic_search.md  study_03_ast_parsing_and_code_intelligence.md  study_04_database_concepts.md  study_05_rust_tauri_and_reactive_frontends.md
project_strategy/modules/: 04_module_context_engine.md  05_module_knowledge_graph.md  06_module_ide.md  07_module_terminal.md  08_module_agent_layer.md  STUDY_GUIDES.md  study_01_file_watching_and_event_pipelines.md  study_02_ner_fuzzy_matching_and_autolinking.md  study_03_terminal_emulation_and_pty.md  study_04_llm_routing_and_context_windows.md  study_05_codemirror_extension_architecture.md
project_strategy/phases/: 09_phase0_skeleton.md  10_phase1_context_engine.md  11_phase2_session_handoff.md  12_phase3_terminal.md  13_phase4_editor.md  14_phase5_knowledge_graph.md  15_phase6_agents_polish.md  16_phase7_advanced.md  17_phase8_mobile_companion.md  STUDY_GUIDES.md  study_01_dev_environment_and_toolchains.md  study_02_testing_a_three_process_architecture.md  study_03_incremental_delivery_and_phase_sequencing.md  study_04_packaging_and_distribution.md  study_05_git_integration_and_programmatic_access.md
project_strategy/reference/: 17_risk_register.md  18_vision.md
sidecar/: .coverage  pyproject.toml
sidecar/cortex_sidecar/: chunking.py  main.py  reference_extraction.py  terminal_extraction.py
sidecar/cortex_sidecar/agents/: base.py  research_daemon.py
sidecar/cortex_sidecar/routes/: chat.py  health.py
sidecar/scripts/: build_sidecar_binary.py
sidecar/tests/: test_api.py  test_chunking.py  test_db.py  test_ingest.py  test_reference_extraction.py  test_terminal_extraction.py
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: commands.rs  db.rs  entity_commands.rs  events.rs  file_commands.rs  ingest.rs  lsp.rs  lsp_commands.rs  main.rs  osc_parser.rs  pty.rs  pty_commands.rs  remote_auth.rs  remote_server.rs  shell_hooks.rs  sidecar.rs  sidecar_client.rs  watcher.rs
src/components/: ChatPanel.tsx  CodeMirrorEditor.tsx  DiagnosticsPanel.tsx  EditorPanel.tsx  FileFinder.tsx  FileTree.tsx  IndexingStatus.tsx  KnowledgeGraph.tsx  NotesPanel.tsx  PaneContainer.tsx  SearchPanel.tsx  SplitContainer.tsx  TaskPanel.tsx  TerminalPanel.tsx  UniversalSearch.tsx  WorkspaceSwitcher.tsx  XtermInstance.tsx
src/components/__tests__/: CodeMirrorEditor.test.tsx  DiagnosticsPanel.test.tsx  EditorPanel.test.tsx  FileFinder.test.tsx  FileTree.test.tsx  IndexingStatus.test.tsx  NotesPanel.test.tsx  SearchPanel.test.tsx  TaskPanel.test.tsx  (+2 more)
src/layouts/: WorkspaceLayout.tsx
src/lib/: codemirrorLanguages.ts  codemirrorTheme.ts  editorLinks.ts  editorState.ts  editorStoreInstance.ts  entityLinks.ts  entitySearch.ts  fileTreeState.ts  files.ts  fuzzyMatch.ts  noteState.ts  noteStoreInstance.ts  notes.ts  pty.ts  runFile.ts  taskState.ts  taskStoreInstance.ts  tasks.ts  tauri.ts  terminalState.ts  terminalStoreInstance.ts  universalSearch.ts
src/styles/: app.css
src/test/: setup.ts
(+13 files in other folders)
