[project]
name = "cortex-sidecar"
version = "0.1.0"
description = "Python sidecar for Cortex — ML/AI workloads, embedding, LLM routing"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "lancedb>=0.17",
    "pyarrow>=18.0",
    "pytest-cov[dev]>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
