[project]
name = "cortex-sidecar"
version = "0.1.0"
description = "Python sidecar for Cortex — ML/AI workloads, embedding, LLM routing"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "lancedb>=0.17",
    "pyarrow>=18.0",
    "pytest-cov[dev]>=7.0.0",
    "sentence-transformers>=5.2.3",
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-rust>=0.23",
    "rapidfuzz>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
