[project]
name = "cortex-sidecar"
version = "0.1.0"
description = "Python sidecar for Cortex — ML/AI workloads, embedding, LLM routing"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "lancedb>=0.17",
    "pyarrow>=18.0",
    "sentence-transformers>=5.2.3",
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-rust>=0.23",
    "rapidfuzz>=3.6",
    "litellm>=1.49",
    "python-dotenv>=1.0",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E402"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ["tests/"]
