[package]
name = "cortex"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
notify = "8.2.0"
anyhow = "1.0.102"
sha2 = "0.10"
ignore = "0.4"
portable-pty = "0.8"
base64 = "0.22"
# Remote API server (Phase 8: Mobile Companion)
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio-tungstenite = "0.24"
mdns-sd = "0.11"
rcgen = "0.13"
hostname = "0.4"
rand = "0.8"
hex = "0.4"
chrono = "0.4"
futures-util = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3.26.0"
